fix(Icon): Alignment issues caused by vertical-align.
BREAKING CHANGE: Icons have been changed to be block elements now, to better support alignment and fix issues where vertical align is adversely affecting elements heights. While this changes technically wouldn't break an application using Icons it does introduce a dramatic design difference where Icons are being used inline.

--- a/src/charts/data-picker/DataPickerHeader.css
+++ b/src/charts/data-picker/DataPickerHeader.css
@@ -2,6 +2,7 @@
 
 .ax-data-picker__header-title {
   display: flex;
+  align-items: center;
 }
 
 .ax-data-picker__header-title-text {
