--- a/src/components/icon/Icon.css
+++ b/src/components/icon/Icon.css
@@ -1,5 +1,6 @@
 .ax-icon {
-  display: inline-block;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
   fill: currentColor;
-  vertical-align: middle;
 }
